--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <!-- HERO -->
   <div class="hero">
     <div class="hero-overlay">
-      <h1 style="color:#EE5A93 !important">Shell’s <p style="color:#37A2C0 !important">Sweet Moments</p></h1>
-      <h3>Homemade cakes & indulgent desserts</h3>
+      <h1 style="color:#EE5A93 !important">Shell’s <span style="color:#37A2C0 !important">Sweet Moments</span></h1>
+      <!-- <h3 id="sub-title">Homemade cakes & indulgent desserts</h3> -->
       <!-- <p style="font-size:1rem; color:#7D579D !important; font-weight: bolder;">✨Homemade cakes & indulgent desserts✨</p> -->
     </div>
   </div>
@@ -25,7 +25,7 @@
   <main>
     <div class="grid">
       <section>
-        <h2>Cakes & Desserts</h2>
+        <h2>Homemade Cakes & Desserts</h2>
         <ul>
           <li>🎂 Custom Birthday Cakes</li>
           <li>🧁 Cupcakes</li>
@@ -33,23 +33,23 @@
           <li>🍓 Cheesecakes</li>
         </ul>
 
-        <div class="photo">
+        <!-- <div class="photo">
           <img src="jars.jpg" alt="Assorted homemade dessert jars and cakes" loading="lazy">
-        </div>
+        </div> -->
         <div class="caption">Freshly made dessert jars</div>
       </section>
 
       <section>
-        <h2>Stuffed Cookies</h2>
+        <h2>Homemade Stuffed Cookies</h2>
         <ul>
           <li>🍫 Nutella Filled</li>
           <li>🍪 Oreo Explosion</li>
           <li>🍯 Caramel Delight</li>
           <li>🎉 Birthday Blast</li>
         </ul>
-         <div class="photo">
+         <!-- <div class="photo">
           <img src="cookie.jpg" alt="Assorted homemade stuffed cookies" loading="lazy">
-        </div>
+        </div> -->
         <div class="caption" style="margin-top:1rem">
           Ooey, gooey & loaded with flavor 💕
         </div>
