--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <li>🍓 Cheesecake — <strong>from €28</strong></li>
           <li>🍪 Stuffed Cookies — <strong>€3.50 each</strong></li>
         </ul>
-        <p class="price-note">Prices may vary based on design & customization 🤍</p>
+        <p class="price-note">Prices may vary based on design & customization 💕</p>
       </div>
     </section>
 
@@ -79,8 +79,11 @@
       <a href="mailto:shellsweetmoments@gmail.com?subject=Order%20Inquiry&body=Hi%20Shell,%0A%0AI'd%20like%20to%20order:%0A-%20Item:%0A-%20Date:%0A-%20Servings:%0A%0AThanks!">
         Email Your Order
       </a>
+
+      <a style="margin-top: 20px !important" href="tel:+442071234567">+44 20 7123 4567 📞</a>
     </div>
   </main>
+  
 
   <footer>
     📧 shellsweetmoments@gmail.com
