--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- HERO -->
   <div class="hero">
     <div class="hero-overlay">
-      <h1><span style="color:#EE5A93 !important; text-decoration: underline; text-decoration-color: #ee5a935b;">Shell’s&nbsp;</span><span style="color:#37A2C0 !important; text-decoration: underline; text-decoration-color: #37a2c057;">&nbsp;Sweet Moments</span></h1>
+      <h1><span style="color:#EE5A93 !important; text-decoration: underline; text-decoration-color: #ee5a935b;">Shell’s&nbsp;<br></span><span style="font-size: 2rem; color:#37A2C0 !important; text-decoration: underline; text-decoration-color: #37a2c057;">&nbsp;Sweet Moments</span></h1>
       <div id="sdfsd">
           <span id="languageFlag" style="font-size: 2rem;">ES</span>&nbsp;<select id="languageSelect">
           <option value="en">English</option>
@@ -110,7 +110,7 @@
         Email Your Order
       </a>
 
-      <a style="margin-top: 20px !important; color: #EA3B76; background: linear-gradient(135deg, var(--pink), var(--gold))" href="tel:+442071234567"><strong>+44 20 7123 4567 📞</strong></a>
+      <a style="margin-top: 20px !important; color: #EA3B76; background: linear-gradient(135deg, var(--pink), var(--gold))" href="tel:+32483501774"><strong>+32 483 501 774 📞</strong></a>
     </div>
   </main>
   
